Turning on debugging info

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "applicationinsights": "^1.0.0",
     "botbuilder": "^3.10.2",
     "restify": "^5.0.0",
     "unicode-properties": "^1.1.0"
